--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
   <title>Portfolio | Aksa Carvalho</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="./img/logo.png" type="image/x-icon" />
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
 
-  <!-- Estilos -->
+  <!-- Estilos CSS -->
   <link rel="stylesheet" href="./assets/style.css" />
 
-  <!-- Ícones Devicon -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+   <!-- Ícones do Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+
+    <!-- Icones de Linguagens-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
   
 </head>
 
@@ -27,7 +37,8 @@
         <li class="menu-item"><a href="#contato"><i class="bi bi-envelope"></i><span>Contato</span></a></li>
       </ul>
     </nav>
-    <button id="toggle-theme" aria-label="Alternar tema"><i class="bi bi-cloud-sun-fill"></i></button>
+    
+     <i id="toggle-theme" class="bi bi-cloud-sun-fill"></i>
   </header>
 
   <!-- =================== CONTEÚDO PRINCIPAL =================== -->
@@ -40,7 +51,7 @@
           <span class="emoji-inicio" aria-hidden="true">👋</span>
         </h2>
         <p>
-          Sou <strong class="destaque">Desenvolvedora Front-end</strong> com foco na criação de interfaces modernas, responsivas e acessíveis.
+          Sou estudante <strong class="destaque"> Full Stack </strong> com foco na criação de interfaces modernas, responsivas e acessíveis.
         </p>
         <a href="#formulario-contato" id="enter-contato" role="button" aria-label="Ir para o formulário de contato">Entre em Contato</a>
       </div>
