alteração no HTML conhecimento/CSS na seção contato max-width

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           Sou Aksa de Carvalho Almeida, 31 anos, residente em Carapicuíba/SP. Atualmente estou em transição de carreira com foco em desenvolvimento web full stack. Estou cursando Full Stack Developer pela Dev Club, onde venho adquirindo conhecimento prático nas principais tecnologias do mercado.
         </p>
         <ul>
-          <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript, React.js</li>
-          <li><strong>Backend:</strong> Node.js, Express.js</li>
-          <li><strong>Banco de dados:</strong> MongoDB, MySQL</li>
+          <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript</li>
+          <li><strong>Backend:</strong> Node.js</li>
+          <li><strong>Banco de dados:</strong> MongoDB</li>
           <li><strong>Versionamento:</strong> Git, GitHub</li>
           <li><strong>Metodologias:</strong> Desenvolvimento ágil, Clean Code</li>
         </ul>
@@ -99,9 +99,7 @@
         <li><i class="devicon-css3-plain reveal top"></i><strong>CSS</strong> <p>Flexbox, Grid e responsividade.</p></li>
         <li><i class="devicon-javascript-plain reveal top"></i><strong>JavaScript</strong> <p>ES6+, DOM e eventos.</p></li>
         <li><i class="devicon-nodejs-plain colored"></i><strong>Node.js</strong> <p>APIs e lógica de servidor.</p></li>
-        <li><i class="devicon-express-original colored"></i><strong>Express.js</strong> <p>Rotas e middlewares.</p></li>
         <li><i class="devicon-mongodb-plain colored"></i><strong>MongoDB</strong> <p>NoSQL, Mongoose e CRUD.</p></li>
-        <li><i class="devicon-mysql-plain colored"></i><strong>MySQL</strong> <p>Consultas SQL e relacionamentos.</p></li>
         <li><i class="devicon-git-plain reveal top"></i><strong>Git</strong> <p>GitHub e controle de versão.</p></li>
       </ul>
     </section>
