--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /><link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <title>Portfolio | Aksa Carvalho</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
+    <!-- Icone da Aba - FAVICON-->
+    <link
+      rel="icon"
+      href="./img/favicon.ico"
+      type="image/x-icon"
+    />
 
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="./assets/style.css" />
